--- a/css/morning-dawn.css
+++ b/css/morning-dawn.css
@@ -1,3 +1,21 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
+    margin: 5%;
+}
+
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+    width: 90%;
+}
+
+td {
+    text-align: center;
+}
+
+table {
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+    table-layout: fixed;
 }
